[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Sem_t√≠tulo-removebg-preview (1) 1.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.1818, 11.1111 )

[node name="Player" type="Sprite"]
scale = Vector2( 0.19, 0.17 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -5.02207, -0.491047 )
scale = Vector2( 1.7, 0.8 )
shape = SubResource( 1 )

[node name="Reload_timer" type="Timer" parent="."]
wait_time = 0.25
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
